hc::functions: Update API for upcoming Styx 5.0

--- a/hc/en/functions.html
+++ b/hc/en/functions.html
@@ -116,9 +116,6 @@
                         <ul>
                           <li><span class="var">serendipity_die</span>: Outputs a fatal error</li>
                           <li><span class="var">errorToExceptionHandler</span>: Handles PHP errors</li>
-                          <li><span class="var">serendipity_specialchars</span>: Drop-in replacement of htmlspecialchars() to deal with different charsets</li>
-                          <li><span class="var">serendipity_entities</span>: Drop-in replacement of htmlentities()</li>
-                          <li><span class="var">serendipity_entity_decode</span>: Drop-in replacement of html_entity_decode()</li>
                         </ul>
                       </li>
                       <li><strong><em>include/functions_calenders.inc.php</em></strong> : Calendar / time calculation</li>
@@ -197,7 +194,7 @@
                           <li><span class="var">[serendipity_functions_gd deprecated], serendipity_functionsGD</span>: Wrapper for GDLib functions</li>
                           <li><span class="var">[serendipity_calculate_aspect_size deprecated], serendipity_calculateAspectSize</span>: Calculate new size for an image, considering aspect ratio and constraint</li>
                           <li><span class="var">serendipity_displayImageList</span>: Display the list of images in our database</li>
-                          <li><span class="var">serendipity_killPath</span>: Recursively delete a directory tree</li>
+                          <li><span class="var">serendipity_nukePath</span>: Recursively delete a directory tree</li>
                           <li><span class="var">serendipity_traversePath</span>: Recursively walk a directory tree</li>
                           <li><span class="var">serendipity_getImageData</span>: Given a relative path to an image, construct an array containing all relevant information about that image in the file structure.</li>
                           <li><span class="var">serendipity_showMedia</span>: Prints a media item</li>
