--- a/hc/en/plugin-api.html
+++ b/hc/en/plugin-api.html
@@ -170,7 +170,7 @@ if (IN_serendipity !== true) {
 
 // Extend the base class
 class serendipity_plugin_myfirstplugin extends serendipity_plugin {
-    var $title = MYFIRSTPLUGIN_TITLE;
+    public $title = MYFIRSTPLUGIN_TITLE;
 
     // Setup metadata
     function introspect(&amp;$propbag) {
@@ -229,7 +229,7 @@ if (IN_serendipity !== true) {
 
 // Extend the base class
 class serendipity_event_myfirstplugin extends serendipity_event {
-    var $title = MYFIRSTPLUGIN_TITLE;
+    public $title = MYFIRSTPLUGIN_TITLE;
 
     // Setup metadata
     function introspect(&amp;$propbag) {
@@ -430,7 +430,7 @@ echo $bag-&gt;get('version');</code></pre>
     }
 }</code></pre>
 
-<p>Be sure to always wrap <code>serendipity_db_bool()</code> around stored boolean values. Also make sure to escape output with <code>serendipity_specialchars()</code> if you pass through configuration values that shall not be interpreted as HTML!</p>
+<p>Be sure to always wrap <code>serendipity_db_bool()</code> around stored boolean values. Also make sure to escape output with <code>htmlspecialchars()</code> if you pass through configuration values that shall not be interpreted as HTML!</p>
 
 <p>You can store/overwrite configuration values inside a plugin:</p>
 
@@ -525,7 +525,7 @@ if (IN_serendipity !== true) {
 
 class serendipity_event_backpage extends serendipity_event
 {
-    var $title = PLUGIN_EVENT_BACKPAGE_NAME;
+    public $title = PLUGIN_EVENT_BACKPAGE_NAME;
 
     function introspect(&$propbag)
     {
@@ -611,7 +611,7 @@ if (IN_serendipity !== true) {
 
 class serendipity_event_backpage extends serendipity_event
 {
-    var $title = PLUGIN_EVENT_BACKPAGE_NAME;
+    public $title = PLUGIN_EVENT_BACKPAGE_NAME;
 
     function introspect(&$propbag)
     {
@@ -733,7 +733,7 @@ if (IN_serendipity !== true) {
 
 class serendipity_event_backpage extends serendipity_event
 {
-    var $title = PLUGIN_EVENT_BACKPAGE_NAME;
+    public $title = PLUGIN_EVENT_BACKPAGE_NAME;
 
     function introspect(&$propbag)
     {
@@ -850,7 +850,7 @@ if (IN_serendipity !== true) {
 
 class serendipity_event_backpage extends serendipity_event
 {
-    var $title = PLUGIN_EVENT_BACKPAGE_NAME;
+    public $title = PLUGIN_EVENT_BACKPAGE_NAME;
 
     function introspect(&$propbag)
     {
