hc::posting...: Update DOCs for upcoming Styx 5.0

--- a/hc/en/posting-blog-entry.html
+++ b/hc/en/posting-blog-entry.html
@@ -109,8 +109,8 @@
                           <li><a href="#docs-publish-or-draft" id="toc-docs-publish-or-draft">Publish or draft</a></li>
                           <li><a href="#docs-category" id="toc-docs-category">Category</a></li>
                           <li><a href="#docs-previewing-your-post" id="toc-docs-previewing-your-post">Previewing your post</a></li>
-                          <li><a href="#docs-allow-comments-to-this-entry" id="toc-docs-allow-comments-to-this-entry">Allow comments to this entry</a></li>
-                          <li><a href="#docs-comments--trackbacks-to-this-entry-requires-moderation" id="toc-docs-comments--trackbacks-to-this-entry-requires-moderation">Comments &amp; trackbacks to this entry requires moderation</a></li>
+                          <li><a href="#docs-allow-comments-to-this-entry" id="toc-docs-allow-comments-to-this-entry">Allow comments</a></li>
+                          <li><a href="#docs-comments--trackbacks-to-this-entry-requires-moderation" id="toc-docs-comments--trackbacks-to-this-entry-requires-moderation">Comments &amp; trackbacks require moderation</a></li>
                           <li><a href="#docs-announce-entries" id="toc-docs-announce-entries">Announce Entries</a></li>
                         </ul>
                       </li>
@@ -143,11 +143,11 @@
 
                     <p>It is wise to always preview your post before actually posting it. That way you can see exactly how the blog entry will look to those that come to your site. By using the “Preview” button, you’ll be able to take an advanced look at the layout of your post and troubleshoot any problems that you may find.</p>
 
-                    <h4 id="docs-allow-comments-to-this-entry">Allow comments to this entry</h4>
+                    <h4 id="docs-allow-comments-to-this-entry">Allow comments</h4>
 
                     <p>This will allow users to comment on your post. If you’d like it to be enabled, simply checkmark the selection box by clicking on it with your mouse.</p>
 
-                    <h4 id="docs-comments--trackbacks-to-this-entry-requires-moderation">Comments &amp; trackbacks to this entry requires moderation</h4>
+                    <h4 id="docs-comments--trackbacks-to-this-entry-requires-moderation">Comments &amp; trackbacks require moderation</h4>
 
                     <p>This will set all comments and trackbacks to require approval before they are allowed to post to your blog. Good for removing profanity, nonsense links, and other such material from comments of those visiting your website. If you’d like it to be enabled, simply checkmark the selection box by clicking on it with your mouse. PLEASE NOTE: If you’d like to be notified of comments posting to your site via email, you must have a valid email address listed in your personal settings which you can reach over the gear-icon in the upper right of the backend.</p>
 
