hc::spam: Update option DESC for upcoming Styx 5.0

--- a/hc/en/spam.html
+++ b/hc/en/spam.html
@@ -159,7 +159,7 @@
 
                     <h4 id="docs-emergency-comment-shutdown">Emergency comment shutdown</h4>
 
-                    <p>If you enable this option, ALL comments and trackbacks to your Blog will be disabled. Nobody can then leave a comment. It is as if you checked the “Do not allow comments to this entry” checkbox for each of your entries.</p>
+                    <p>If you enable this option, ALL comments and trackbacks to your Blog will be disabled. Nobody can then leave a comment. It is as if you checked the “Do not allow comments” (to this entry) checkbox for each of your entries.</p>
 
                     <p>This option is meant to be used when you might go on holiday and want no SPAM to appear on your Blog.</p>
 
