--- a/book/index.html
+++ b/book/index.html
@@ -40339,8 +40339,8 @@ die Variable <code class="smarty">{$ENTRIES}</code> mittels der Datei <code>entr
                 Mittels der URL-Variable
                 <code>serendipity_admin.php?serendipity[noFooter]=true</code> können
                 Plugins oder andere Bestandteile des Backends bestimmen, ob dieses Menü
-                aktiviert oder deaktiviert werden soll. Enthält <code class="item smarty">{$admin_vars.no_fgooter}</code>
-                den Wert <code>true</code>, wird die Fußleisted des Backends versteckt.
+                aktiviert oder deaktiviert werden soll. Enthält <code class="item smarty">{$admin_vars.no_footer}</code>
+                den Wert <code>true</code>, wird die Fußleiste des Backends versteckt.
             </span>
         </span>
 
