book: Prep for new admin_vars.popup_content

--- a/book/index.html
+++ b/book/index.html
@@ -40344,6 +40344,21 @@ die Variable <code class="smarty">{$ENTRIES}</code> mittels der Datei <code>entr
             </span>
         </span>
 
+        <span class="box"><code class="sub-item smarty">{$admin_vars.popup_content}</code>
+            <span class="sub-box">
+                <span class="smarty-type"><em>Variablentyp:</em> <code class="type">Boolean</code></span>
+            </span>
+            <span class="sub-box">
+                Gibt an, dass weder der Kopf-, noch die Seiten- und Fußleiste im Backend-Bereich
+                eingebunden werden sollen. Dies verkürzt den GET URI string.
+                Mittels der URL-Variable
+                <code>serendipity_admin.php?serendipity[popupContent]=true</code> können
+                Plugins oder andere Bestandteile des Backends bestimmen, das alle drei Bereiche
+                zugleich deaktiviert werden sollen. Enthält <code class="item smarty">{$admin_vars.popup_content}</code>
+                den Wert <code>true</code>, wird nur der eigentliche content im Popup angezeigt.
+            </span>
+        </span>
+
         <span class="box"><code class="sub-item smarty">{$admin_vars.post_action}</code>
             <span class="sub-box">
                 <span class="smarty-type"><em>Variablentyp:</em> <code class="type">Zeichenkette</code></span>
