book: Extend 64971d5aa4be8c52394cceeb2acc25f1d0aef54e

--- a/book/index.html
+++ b/book/index.html
@@ -40350,7 +40350,7 @@ die Variable <code class="smarty">{$ENTRIES}</code> mittels der Datei <code>entr
             </span>
             <span class="sub-box">
                 Gibt an, dass weder der Kopf-, noch die Seiten- und Fußleiste im Backend-Bereich
-                eingebunden werden sollen. Dies verkürzt den GET URI string.
+                eingebunden werden sollen. Dies verkürzt den GET URI string. Benutzbar mit Styx 5.1+.
                 Mittels der URL-Variable
                 <code>serendipity_admin.php?serendipity[popupContent]=true</code> können
                 Plugins oder andere Bestandteile des Backends bestimmen, das alle drei Bereiche
