--- a/hc/en/the-stockholm-lessons.html
+++ b/hc/en/the-stockholm-lessons.html
@@ -160,7 +160,7 @@
 
                     <div><picture><source srcset="/i/x/Lorem_Ipsum_before_learning.avif" type="image/avif"><source srcset="/i/x/Lorem_Ipsum_before_learning.webp" type="image/webp"><img alt="" class="serendipity_image_center" loading="lazy" src="/i/x/Lorem_Ipsum_before_learning.png" width="800" height="222"></picture></div>
 
-                    <p><strong>Dismiss</strong> this entry and start a new one.</p>
+                    <p><strong>Dismiss</strong> this entry and start a new one. Up from Styx 5.0 with the changed RichText Editor you can write straight away and the text will be automatically paragraphed. Jump into lesson lecture two.</p>
 
                     <p>Before you now add the text. Place your cursor where text would start at the beginning and hit the ENTER return key of your keyboard. You see that your editors line jumps down to a next position. Now, just use the BACKSPACE (delete) button of your keyboard, so the cursor jumps back to the first (starting position) line. As simple as that. This announces to the editor that you want to start with a paragraph.</p>
 
