book: Add (virtual) to js of Dateien des Stammverzeichnis...

--- a/book/index.html
+++ b/book/index.html
@@ -48598,7 +48598,7 @@ Plugin aufzurufen.</p>
     <span class="li"><code class="item sub-file">serendipity_admin_image_selector.php</code> stellt das Mediathek-Popup dar.</span>
     <span class="li"><code class="item sub-file">serendipity_config.inc.php</code> lädt das Serendipity Framework.</span>
     <span class="li"><code class="item sub-file">serendipity_config_local.inc.php</code> enthält zentrale Konfigurationswerte Serendipitys.</span>
-    <span class="li"><code class="item sub-file">serendipity_editor.js</code>, <code class="item sub-file">serendipity_styx.js</code> stellt JavaScript-Funktionen im Backend bereit.</span>
+    <span class="li">(Virtuell legacy) <code class="item sub-file">serendipity_editor.js</code>, (Virtuell) <code class="item sub-file">serendipity_styx.js</code> stellt JavaScript-Funktionen im Backend bereit.</span>
     <span class="li"><code class="item sub-file">serendipity_xmlrpc.php</code> bindet die Anlaufstelle für die XML-RPC API ein.</span>
     <span class="li"><code class="item sub-file">wfwcomment.php</code> bindet eine Anlaufstelle für wfwComment-API-Aufrufe ein.</span>
 </span>
